# fms

./: .env  .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  Cargo.toml  Dockerfile  Fms.sln
backend/Fms/: .gitignore  Dockerfile  Fms.csproj  Fms.http  Program.cs  Startup.cs  appsettings.json
backend/Fms/Application/: FmsDbContext.cs  FmsDbContextDesignFactory.cs  MigrationManager.cs  PublicErrorHandlerMiddleware.cs
backend/Fms/Controllers/: AccountController.cs  AuthController.cs  OrganizationController.cs  SubscriptionController.cs  TransactionCategoryController.cs  TransactionController.cs  UserController.cs  WorkspaceController.cs
backend/Fms/Data/: ApplicationMessages.cs  ErrorMessages.cs
backend/Fms/Dtos/: AccessTokenResponseDto.cs  AccountResponseDto.cs  BuySubscriptionRequestDto.cs  OrganizationResponseDto.cs  OrganizationShortResponseDto.cs  OrganizationUpsertRequestDto.cs  OrganizationUserResponseDto.cs  PaginationDto.cs  PublicClientErrorDto.cs  PublicErrorDto.cs  SortDirectionDto.cs  TransactionCategoryCriteriaDto.cs  TransactionCategoryResponseDto.cs  TransactionCategoryUpsertRequestDto.cs  TransactionCriteriaDto.cs  TransactionGroupedByCategoryResponseDto.cs  TransactionGroupedByUserResponseDto.cs  TransactionResponseDto.cs  (+12 more)
backend/docker/: init.sql
backend/locales/: errors.yml  validation.yml
backend/migrations/: 1_users.sql  2_add_user_names.sql  3_organizations.sql  4_accounts.sql  5_workspaces.sql  6_transactions.sql  7_create_user_accounts.sql  8_added_missing_workspace_roles.sql
backend/src/: main.rs
(+272 files in other folders)
