[package]
name = "fms_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.201"
anyhow = "1.0.83"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "test-util"] }
actix-web = "4.5.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
dotenvy = "0.15.7"
testcontainers = "0.16.7"
