[package]
name = "fms_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.5.0"
serde = "1.0.201"
anyhow = "1.0.83"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "test-util"] }
actix-web = "4.5.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono"] }
dotenvy = "0.15.7"
log = "0.4.21"
chrono = "0.4.38"
async-trait = "0.1.80"
futures = "0.3.30"
ring = "0.17.8"
jsonwebtoken = "=9.3.0"
rust-i18n = "3.0.1"
base64 = "0.22.1"
